# atlas-clean-code-oktober-2024

./: README.md
NimGame/: CMakeLists.txt  main.cpp
NimGame/game/: AbstractGame.h
NimGame/game/nimgame/: NimGameImpl.h
NimGame/game/nimgame/player/: AbstractNimGamePlayer.h  ComputerPlayer.h  HumanPlayer.h  NimGamePlayer.h
NimGame/game/player/: AbstractPlayer.h
ThreadDemo/: main.cpp
VectorFillerUebung/: CMakeLists.txt
VectorFillerUebung/bootstrap/: Bootstrap.h
VectorFillerUebung/client/impl/: ClientImpl.h
VectorFillerUebung/collections/: AbstractVectorFactory.h  VectorFactory.h
VectorFillerUebung/collections/impl/builder/: VectorFactoryBuilder.h
VectorFillerUebung/collections/impl/decorators/: VectorFactoryBenchmarkDecorator.h
VectorFillerUebung/collections/impl/parallel/: VectorFactoryParallelImpl.h
VectorFillerUebung/time/: Stopwatch.h
